--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
-    "aos": "^2.3.4",
     "date-fns": "^3.6.0",
     "jquery": "^3.7.1",
     "next": "14.2.1",
@@ -23,6 +23,7 @@
     "react-phone-number-input": "^3.3.12",
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
+    "react-toastify": "^9.1.3",
     "sharp": "^0.33.3",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^3.5.2"
