--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-toastify": "^9.1.3",
     "sharp": "^0.33.3",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.4",
     "web-vitals": "^3.5.2"
   },
   "devDependencies": {
