--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-helmet-async": "^1.3.0",
+    "react-icons": "^5.2.1",
     "react-phone-number-input": "^3.3.12",
     "react-slick": "^0.30.2",
     "react-toastify": "^9.1.3",
