--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
-    "next": "14.2.1",
+    "next": "^14.2.5",
     "react": "^18",
-    "react-bootstrap": "^2.10.2",
+    "react-bootstrap": "^2.10.4",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-helmet-async": "^1.3.0",
