--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
-    "next": "14.2.1",
-    "react": "^18",
-    "react-bootstrap": "^2.10.2",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-countup": "^6.5.3",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^5.2.1",
     "react-phone-number-input": "^3.3.12",
@@ -30,6 +30,6 @@
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.2.1"
+    "eslint-config-next": "^14.2.5"
   }
 }
