--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-bootstrap-pagination-control": "^1.0.5",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^1.3.0",
