--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^15.1.3",
     "aos": "^2.3.4",
     "axios": "^1.7.5",
     "bootstrap": "^5.3.3",
