--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "aos": "^2.3.4",
     "axios": "^1.7.5",
     "bootstrap": "^5.3.3",
+    "d3-geo": "^3.1.1",
+    "d3-geo-projection": "^4.0.0",
     "date-fns": "^3.6.0",
     "gsap": "^3.12.7",
     "my-app": "file:",
@@ -23,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-phone-number-input": "^3.3.12",
+    "react-simple-maps": "^3.0.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^9.1.3",
     "sharp": "^0.33.3",
