--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.50",
+    "@langchain/openai": "^0.5.8",
     "aos": "^2.3.4",
     "axios": "^1.7.5",
     "bootstrap": "^5.3.5",
