--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aos": "^2.3.4",
     "axios": "^1.7.5",
     "bootstrap": "^5.3.5",
+    "cheerio": "^1.0.0",
     "d3-geo": "^3.1.1",
     "date-fns": "^3.6.0",
     "my-app": "file:",
@@ -21,6 +22,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-bootstrap-pagination-control": "^1.0.5",
+    "react-circular-progressbar": "^2.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
