--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "react-icons": "^5.2.1",
     "react-phone-number-input": "^3.3.12",
     "react-simple-maps": "^3.0.0",
+    "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.2",
+    "react-text-transition": "^3.1.0",
     "react-toastify": "^9.1.3",
+    "react-typed": "^2.0.12",
     "sharp": "^0.33.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.4",
